src/styles/Home.css
#home {
  display: grid;
  grid: 1fr 1fr 1fr 1fr / 1fr 1fr;
  justify-items: center;
  align-items: center;
  column-gap: 24px;
  padding: 72px;
  height: 100%;
  text-align: center;
  background: rgb(240, 240, 240);
}

#home .imageContainer {
  grid-area: 1 / 2 / 5 / 3;
}

#home img {
  width: 700px;
  height: auto;
  border-radius: 4px;
  border: 1px solid gray;
}

#home .credit {
  position: relative;
  left: 240px;
  bottom: 25px;
  font-size: 0.8rem;
}

.homeTitle1 {
  grid-area: 1 / 1 / 2 / 2;
  font-size: 2.5rem;
  color: rgb(94, 92, 92);
}
.homeTitle2 {
  grid-area: 2 / 1 / 3 / 2;
  font-size: 3.5rem;
}

.homeTitle3 {
  grid-area: 3 / 1 / 4 / 2;
  font-size: 2rem;
  font-weight: 700;
}

#home a {
  grid-area: 4 / 1 / 5 / 2;
  background: black;
  color: white;
  border: 1px solid gray;
  text-decoration: none;
  font-size: 1.8rem;
  padding: 14px 48px;
  border-radius: 12px;
}

#home a:hover {
  background: rgba(0, 0, 0, 0.714);
}

